// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Container) OasisWrapUnwrapBalances should render 1`] = `
<OasisWrapUnwrapBalances
  activeUnwrappedToken="GNT"
  changeRoute={[Function]}
  defaultAccount="0x0000000000000000000000000000000000000000"
  resetActiveUnwrapForm={[Function]}
  resetActiveWrapForm={[Function]}
  setActiveWrapUnwrappedToken={[Function]}
  wrapUnwrapBalances={
    Immutable.List [
      Immutable.Map {
        unwrappedToken: "ETH",
        wrapperToken: "W-ETH",
        unwrappedBalance: "4995357305000000000",
        wrappedBalance: "0",
      },
      Immutable.Map {
        unwrappedToken: "GNT",
        wrapperToken: "W-GNT",
        unwrappedBalance: "0",
        wrappedBalance: "0",
      },
    ]
  }
/>
`;

exports[`(Container) OasisWrapUnwrapBalances will receive right actions 1`] = `
Object {
  "actions": Object {
    "changeRoute": [Function],
    "resetActiveUnwrapForm": [Function],
    "resetActiveWrapForm": [Function],
    "setActiveWrapUnwrappedToken": [Function],
  },
}
`;

exports[`(Container) OasisWrapUnwrapBalances will receive right props 1`] = `
Object {
  "activeUnwrappedToken": "GNT",
  "defaultAccount": "0x0000000000000000000000000000000000000000",
  "wrapUnwrapBalances": Immutable.List [
    Immutable.Map {
        unwrappedToken: "ETH",
        wrapperToken: "W-ETH",
        unwrappedBalance: "4995357305000000000",
        wrappedBalance: "0",
    },
    Immutable.Map {
        unwrappedToken: "GNT",
        wrapperToken: "W-GNT",
        unwrappedBalance: "0",
        wrappedBalance: "0",
    },
],
}
`;
